--- a/modules/swagger-codegen/src/main/resources/Java/pom.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/pom.mustache
@@ -152,7 +152,7 @@
     <dependency>
       <groupId>com.mendix.cloud</groupId>
       <artifactId>urlsign</artifactId>
-      <version>master_116698_c864c5a9</version>
+      <version>master_215431_2f3391df</version>
     </dependency>
 
     <!-- test dependencies -->
