changed artifactory link

--- a/modules/swagger-codegen/src/main/resources/Java/pom.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/pom.mustache
@@ -152,7 +152,7 @@
     <dependency>
       <groupId>com.mendix.cloud</groupId>
       <artifactId>urlsign</artifactId>
-      <version>master_215431_2f3391df</version>
+      <version>master_113363_cb577c5a</version>
     </dependency>
 
     <!-- test dependencies -->
@@ -167,7 +167,7 @@
   <repositories>
     <repository>
       <id>cloud-release-local</id>
-      <url>https://treasury.srv.hq.mendix.net/artifactory/cloud-release-local</url>
+      <url>https://artifactory.rnd.mendix.com/artifactory/cloud-release-local</url>
     </repository>
   </repositories>
 
